--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "orbit",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "dev": "nodemon backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build -- prefix frontend",
-    "start": "node backend/server.js"
-  },
-  "type": "module",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "mongoose": "^8.10.1",
-    "orbit": "file:",
-    "passport": "^0.7.0",
-    "passport-github2": "^0.1.12"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+	"name": "mern-github-yt",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"dev": "nodemon backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+		"start": "node backend/server.js"
+	},
+	"type": "module",
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.2",
+		"express": "^4.18.2",
+		"express-session": "^1.18.0",
+		"mern-github-yt": "file:",
+		"mongoose": "^8.1.1",
+		"passport": "^0.7.0",
+		"passport-github2": "^0.1.12"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.3"
+	}
 }
