--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mern-github-yt",
+	"name": "orbit",
 	"version": "1.0.0",
 	"description": "",
 	"main": "server.js",
@@ -17,8 +17,8 @@
 		"dotenv": "^16.4.2",
 		"express": "^4.18.2",
 		"express-session": "^1.18.0",
-		"mern-github-yt": "file:",
 		"mongoose": "^8.1.1",
+		"orbit": "file:",
 		"passport": "^0.7.0",
 		"passport-github2": "^0.1.12"
 	},
